# nativekit

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  binding.gyp  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  release.yml
docs/: api-reference.md  architecture.md  integration-guide.zh-CN.md  linux-support-plan.md  roadmap.md
examples/electron/: index.html  main.mjs  package.json  preload.cjs  renderer.mjs  styles.css  worker.mjs
js/: index.ts
src/: binding.cpp
src/apps/linux/: icon.cpp
src/common/: event_callback.cc  event_callback.h
src/common/linux/: image_utils.cpp  image_utils.h
src/common/mac/: image_utils.mm
src/common/win/: image_utils.cpp
src/drag/: drag_source.cc  drag_source.h
src/drag/win/: drag_source.cpp
src/ipc/: frame_decoder.h  secure_channel.cc  secure_channel.h
src/ipc/mac/: secure_channel.mm
src/ipc/win/: secure_channel.cpp
src/overlay/: overlay_manager.cc  overlay_manager.h
src/overlay/linux/: overlay_window.cpp
src/overlay/mac/: overlay_window.mm
src/overlay/win/: overlay_window.cpp
src/windows/linux/: window_query.cpp
src/windows/mac/: window_query.mm
src/windows/win/: window_query.cpp
tests/: package.integration.test.ts  windows.integration.test.ts
tests/fixtures/: framed-worker.mjs
